--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,15 +1,16 @@
 .header {
-  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   height: 200px;
-  left: 0px;
-  right: 0px;
-  top: 14px;
+  background-color: var(--gray-700);
 }
 
 .header img {
-  position: absolute;
+  display: flex;
+  align-items: center;
   width: 126px;
-  height: 48px;
-  left: 657px;
+  height: 48px;  
   top: 72px;
 }
