--- a/src/components/NewTask.module.css
+++ b/src/components/NewTask.module.css
@@ -1,46 +1,44 @@
 .newTask {
+  min-width: 736px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;
-  position: absolute;
-  width: 736px;
   height: 54px;
-  left: calc(50% - 736px/2);
-  top: 173px;
-
+  margin-top: -27px;
 }
 
-.newTask input {
+.newTask form {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  box-sizing: border-box;
+}
+
+.newTask form input {
+  flex-grow: 1;
+  background-color: var(--gray-500);
+  border: none;
   padding: 16px;
-  gap: 8px;
-  width: 638px;
-  height: 54px;
-  background: #262626;
-  border: 1px solid #0D0D0D;
   border-radius: 8px;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
+  color: var(--gray-100);
 }
 
-.button {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 16px;
-  gap: 8px;
+.newTask form input::placeholder {
+  color: var(--gray-400);
+}
+
+.newTask form button svg{
+  margin-left: 4px;
+}
+
+.newTask form button {
+  margin-left: 0.5rem;
+  border: none;
   width: 90px;
-  height: 52px; 
-  background: #1E6F9F;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  gap: 8px;
   border-radius: 8px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;  
+  background-color: var(--blueDark);
+  color: var(--gray-100);
+
 }
