--- a/src/global.css
+++ b/src/global.css
@@ -14,3 +14,14 @@
 
   --danger: #E25858; 
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--gray-600);
+  color: var(--gray-100);
+}
