--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -1,150 +1,72 @@
-.tasks {
+.list {
   display: flex;
-  min-width: 736px;
-
-  padding: 0px;
-  gap: 24px;
-
-  position: absolute;
-  height: 287px;
-  left: calc(50% - 736px/2);
-  top: 291px;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 12px;
+  gap: 12px;
+  width: 736px;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
 }
 
-.info {
+.task {  
+  box-sizing: border-box; 
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding: 0px;
+  align-items: flex-start;
+  padding: 16px;
+  gap: 12px;
+  width: 736px;
+  height: 72px;
+  background: #262626;
+  /* Gray 400 */
+  border: 1px solid #333333;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.06);
+  border-radius: 8px;
   
-  width: 46rem;
-  height: 1.18rem;
-
+  /* Inside auto layout */
   flex: none;
   order: 0;
   align-self: stretch;
-  flex-grow: 0;  
+  flex-grow: 0;
 }
 
-.created {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;
-  width: 8.68rem;
-  height: 1.18rem;
+.check {
+  /* check */
+  width: 24px;
+  height: 24px;
+  /* Inside auto layout */
   flex: none;
   order: 0;
   flex-grow: 0;
 }
 
-.createdTasks {  
-  height: 1.06rem;
+.taskText {
+  width: 632px;
+  height: 40px;
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 700;
-  font-size: 0.87rem;
-  line-height: 1.06rem;
-
-  color: #4EA8DE;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
-.createdTasksCounter {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2px 8px;
-  gap: 10px;
-
-  width: 1.56rem;
-  height: 1.18rem;
-
-  background: #333333;
-  border-radius: 999px;
-
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+  /* or 20px */
+  /* Gray 100 */
+  color: #F2F2F2;
+  /* Inside auto layout */
   flex: none;
   order: 1;
-  flex-grow: 0;
+  flex-grow: 1;
 }
 
-.createdTasksCounterText {
-  width: 0.56rem;
-  height: 0.93rem;
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 0.75rem;
-  line-height: 0.93rem;
-  color: #D9D9D9;
-
+.trash {
+  /* trash */
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+  /* Inside auto layout */
   flex: none;
-  order: 0;
+  order: 2;
   flex-grow: 0;
 }
-
-.done {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0px;
-  gap: 8px;
-  width: 8.68rem;
-  height: 1.18rem;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
-.doneTasks{ 
-  width: 4.87rem;
-  height: 1.06rem;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 0.87rem;
-  line-height: 1.06rem;  
-  color: #8284FA;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
-.doneTasksCounter {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2px 8px;
-  gap: 10px;
-
-  width: 1.56rem;
-  height:  1,18rem;
-  background: #333333;
-  border-radius: 999px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-}
-
-.doneTasksCounterText {
-  width: 0.56rem;
-  height: 0.93rem;
-  
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 0.75rem;
-  line-height: 0.93rem;
-  color: #D9D9D9;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
