--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,51 @@
   background: #1A1A1A;    
 }
 
+.newTask {
+  min-width: 736px;
+  display: flex;
+  height: 54px;
+  margin-top: -27px;
+}
+
+.newTask form {
+  width: 100%;
+  display: flex;
+}
+
+.newTask form input {
+  flex-grow: 1;
+  background-color: var(--gray-500);
+  border: none;
+  padding: 16px;
+  border-radius: 8px;
+  color: var(--gray-100);
+}
+
+.newTask form input::placeholder {
+  color: var(--gray-400);
+}
+
+.newTask form button svg{
+  margin-left: 4px;
+}
+
+.newTask form button {
+  margin-left: 0.5rem;
+  border: none;
+  width: 90px;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  gap: 8px;
+  border-radius: 8px;
+  background-color: var(--blueDark);
+  color: var(--gray-100);
+
+}
+
 
 @media (max-width: 90rem) {
 
