--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -2,13 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 12px;
-  gap: 12px;
-  width: 736px;
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
+  margin-bottom: 20px;
 }
 
 .task {  
