--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -64,3 +64,45 @@
   order: 2;
   flex-grow: 0;
 }
+
+.checkboxContainer input {
+  position: absolute;
+  opacity: 0;
+  height: 0;
+  width: 0;
+}
+
+.checkboxContainer .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1.125rem;
+  width: 1.125rem;
+  border: 2px solid #4ea8de;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.checkboxContainer .checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 0.25rem;
+  left: 0.45rem;
+  height: 7px;
+  width: 3.5px;
+  border: solid #F2F2F2;
+  border-width: 0 1.5px 1.5px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.checkboxContainer input:checked ~ .checkmark {
+  background-color: #5e60ce;
+  border-color: #5e60ce;
+} 
+
+.checkboxContainer input:checked ~ .checkmark::after {
+  display: block;
+} 
